--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,9 @@ plugins {
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
-
+    dataBinding {
+        enabled = true
+    }
     defaultConfig {
         applicationId "Resabev.Software"
         minSdkVersion 24
@@ -33,7 +35,6 @@ android {
 }
 
 dependencies {
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
